# PALindrome

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cli/: CMakeLists.txt  cli_util.cpp  cli_util.hpp  convert_command.cpp  convert_command.hpp  demod_command.cpp  demod_command.hpp  info_command.cpp  info_command.hpp  main.cpp  render_command.cpp  render_command.hpp  sync_command.cpp  sync_command.hpp  tune_command.cpp  tune_command.hpp
cmake/: arch.cmake  catch2.cmake  dependency.cmake  lodepng.cmake  pedantic.cmake
cmake/toolchains/: gcc.cmake
corpus/: alex_kidd.sigmf-data  alex_kidd.sigmf-meta  alex_kidd_title.sigmf-data  alex_kidd_title.sigmf-meta  wb3.sigmf-data  wb3.sigmf-meta  wb3_airspy.sigmf-data  wb3_airspy.sigmf-meta
docs/: Firetrack_BW_Trick.md  README.md  TDA3561A.md  capture.md  corpus.md  performance.md  render.md  simd.md
lib/: CMakeLists.txt  agc.cpp  biquad.cpp  chroma_decoder.cpp  dc_blocker.cpp  decoder.cpp  demod.cpp  fft.cpp  fir.cpp  gaussian.cpp  horizontal_sweep.cpp  image.cpp  mixer.cpp  palindrome.cpp  screen.cpp  sigmf.cpp  splat.cpp  sync_separator.cpp  vertical_sync.cpp  video.cpp  wav.cpp
lib/include/palindrome/: agc.hpp  biquad.hpp  buffer.hpp  chroma_decoder.hpp  cmul.hpp  dc_blocker.hpp  decoder.hpp  demod.hpp  fft.hpp  fir.hpp  gaussian.hpp  horizontal_sweep.hpp  image.hpp  mixer.hpp  palindrome.hpp  phase.hpp  phasor.hpp  pipeline.hpp  pipeline_run.hpp  pow01.hpp  restrict.hpp  restrict_ptr.hpp  screen.hpp  sigmf.hpp  splat.hpp  sync_separator.hpp  vertical_sync.hpp  video.hpp  video_types.hpp  wav.hpp  work_queue.hpp
lib/test/: BiquadTest.cpp  BufferTest.cpp  CMakeLists.txt  DcBlockerTest.cpp  DemodBench.cpp  DemodTest.cpp  FftTest.cpp  FirTest.cpp  GaussianTest.cpp  ImageTest.cpp  MixerTest.cpp  PalindromeTest.cpp  PhaseTest.cpp  PipelineRunTest.cpp  PipelineTest.cpp  Pow01Test.cpp  RestrictPtrTest.cpp  SigmfTest.cpp  SplatBench.cpp  SplatTest.cpp  VideoTest.cpp  VisionIfTest.cpp  WavTest.cpp
tools/: capture_airspy.py  capture_corpus.py  inspect_capture.py  live_view.py  tune.py
